--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,14 @@ footer {
   text-align: center;
 }
 
+copyright {
+  margin-top: 50px;
+  padding: 20px 0;
+  text-align: center;
+  font-size: .6875em;
+}
+
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
