--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           </div>
 
           <nav>
+            {% include navigation.html %}
             <a href="{{ site.baseurl }}/policy">Peering Policy</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
