--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
 
-          <nav>
-            {% include navigation.html %}
+          {% include navigation.html %}
+  <!--        <nav>
             <a href="{{ site.baseurl }}/policy">Peering Policy</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/about">About</a>  -->
           </nav>
         </header>
       </div>
