--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
           {% include navigation.html %}
   <!--        <nav>
             <a href="{{ site.baseurl }}/policy">Peering Policy</a>
-            <a href="{{ site.baseurl }}/about">About</a>  -->
-          </nav>
+            <a href="{{ site.baseurl }}/about">About</a>  
+          </nav> -->
         </header>
       </div>
     </div>
