--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,10 @@
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
-
-          {% include navigation.html %}
-  <!--        <nav>
+          <nav>
             <a href="{{ site.baseurl }}/policy">Peering Policy</a>
             <a href="{{ site.baseurl }}/about">About</a>  
-          </nav> -->
+          </nav>
         </header>
       </div>
     </div>
