--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,8 @@
             <p class="site-description">{{ site.description }}</p>
           </div>
           <nav>
-            <a href="{{ site.baseurl }}/policy">Peering Policy</a>
+            <a href="{{ site.baseurl }}/peering">Peering</a>
+            <a href="{{ site.baseurl }}/network">Network</a>
             <a href="{{ site.baseurl }}/about">About</a>  
           </nav>
         </header>
